Final preparations for release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Revision history for Test-Override-UserAgent
 ============================================
 
-0.001 TO BE RELEASED
+0.001 Sun, January 31, 2010 00:13:43 -0500
   * First release.
+
