--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Test-Override-UserAgent version 0.002
-=====================================
+Test-Override-UserAgent version 0.002_001
+=========================================
 
 INSTALLATION
 ------------
