--- a/Changes
+++ b/Changes
@@ -1,7 +1,11 @@
 Revision history for Test-Override-UserAgent
 ============================================
 
-0.002_001 TO BE RELEASED
+0.003 TO BE RELEASED
+  * [New] New `override_for` default scopper for configuration
+    packages.
+
+0.002_001 Sat, March 13, 2010 10:35:00 -0500
   * [Fix] Fixed test t/user_agent.t to be less prone to failure if a
     request to localhost causes a redirect.
   * Experimental change to `Module::Build`
