--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for Test-Override-UserAgent
 ============================================
 
-0.003 TO BE RELEASED
+0.003 Fri, February 4, 2011 11:43:41 -0500
   * [New] New `override_for` default scopper for configuration
     packages.
 
